docs/errors/examples/wrong-argument-count-too-few/wrong-argument-count-too-few.expected.txt
error[E0003]: wrong number of arguments
  --> wrong-argument-count-too-few.grob:7:7
   |
 7 | print(greet("Ada"))
   |       ^^^^^^^^^^^^^
   |
   = note: 'greet' requires 2 arguments; 1 was supplied
   = note: missing parameter: 'last: string'
